--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-resume_url: "portfolio/"
+resume_url: "portfolio"
 author_name: Ames Ma
 description: ""
 markdown: kramdown
@@ -27,7 +27,7 @@ title: Ames Ma
 email: jiahuima18@gmail.com
 #description: >- # this means to ignore newlines until "baseurl:"
 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/home" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
