--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ title: Ames Ma
 email: jiahuima18@gmail.com
 #description: >- # this means to ignore newlines until "baseurl:"
 
-baseurl: "/home" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
