--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ email: jiahuima18@gmail.com
 #description: >- # this means to ignore newlines until "baseurl:"
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://amesma.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: dev-portfolio-blog
