added remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://amesma.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-theme: dev-portfolio-blog
+remote_theme: rohitjain00/dev-portfolio-blog
 plugins:
   - jekyll-feed
 
