proper install remote, change font

--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,11 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://amesma.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
+
 remote_theme: rohitjain00/dev-portfolio-blog
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
